--- a/couchapp/_attachments/style/default-polymaps.css
+++ b/couchapp/_attachments/style/default-polymaps.css
@@ -18,26 +18,28 @@ svg {
   position: absolute;
   left: 0;
   bottom: 4px;
-  padding-left: 5px;
+  padding: 0 0 0 5px;
   font: 9px sans-serif;
   color: #000;
   cursor: default;
 }
 
 #infobox {
+    font-family: Lato, sans-serif;
     position: absolute;
     left: 50px;
     top: 150px;
-    width: 300px;
-    padding-left: 5px;
-    padding-right: 5px;
-    background-color: #FFEFD5;
+    width: 320px;
+    padding: 15px 15px 15px 15px;
+    background-color: rgba(200,200,200,.8);
+    /*background-color: #FFEFD5;*/
 }
 
 #infoThankYou {
+    font-family: Lato, sans-serif;
     position: absolute;
-    right: 10px;
     top: 10px;
+    right: 10px;
 }
 
 #copy a {
